--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/tokimon/sudoku-solver"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel/register ./sudoku-solver.spec.js"
+    "test": "mocha --ui bdd --compilers js:babel-core/register ./sudoku-solver.spec.js"
   },
   "keywords": [
     "Sudoku",
@@ -17,12 +17,17 @@
   "author": "Toke Voltelen",
   "license": "ISC",
   "dependencies": {
-    "babel": "^5.8.29",
+    "babel-cli": "^6.1.1",
+    "babel-core": "^6.0.20",
+    "babel-preset-es2015": "^6.0.15",
     "chai": "^3.4.0",
     "mocha": "^2.3.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.12",
-    "babel-core": "^6.0.12"
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
